--- a/src/index.scss
+++ b/src/index.scss
@@ -50,12 +50,22 @@ header {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 13px;
+  position: relative;
 
   input {
     border: 0;
     padding: 10px;
     font-size: 16px;
     width: 200px;
+  }
+
+  .clear {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    width: 23px;
+    height: 23px;
+    transform: translateY(-50%);
   }
 }
 
